--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "downloadjs": "^1.4.7",
@@ -19,6 +20,7 @@
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
