--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.3",
     "downloadjs": "^1.4.7",
     "firebase": "^7.24.0",
+    "firebase-tools": "^8.18.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
