--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "downloadjs": "^1.4.7",
     "firebase": "^7.24.0",
     "firebase-tools": "^8.18.0",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
