--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "downloadjs": "^1.4.7",
     "firebase": "^7.24.0",
     "firebase-tools": "^8.18.0",
+    "firestore": "^1.1.6",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
@@ -26,7 +27,7 @@
     "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
     "react-redux": "^7.2.2",
-    "react-redux-firebase": "^3.7.0",
+    "react-redux-firebase": "^3.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slideshow-image": "^3.3.0",
